#38 Fixed login modal link on mobile view

--- a/assets/styles/less/navigation.less
+++ b/assets/styles/less/navigation.less
@@ -49,6 +49,10 @@
   left: 0;
 }
 
+.cbp-spmenu-vertical a{
+  cursor: pointer;
+}
+
 .cbp-spmenu-push-toright {
   left: 240px;
 }
